--- a/blog/my-first-post/index.mdx
+++ b/blog/my-first-post/index.mdx
@@ -2,6 +2,9 @@
 title: "My First Post"
 date: "2021-07-23"
 slug: "my-first-post"
+hero_image: "./tim.jpg"
+hero_image_alt: "A gray pitbull relaxing on the sidewalk with its tongue hanging out"
+hero_image_credit_text: "Christopher Ayme"
 ---
 
 This is my first blog post! Isn't it _great_?
